--- a/football/39/2022/Regular Season - 17.json
+++ b/football/39/2022/Regular Season - 17.json
@@ -2,7 +2,7 @@
     {
         "fixture": {
             "id": 868106,
-            "referee": "M. Oliver",
+            "referee": "Michael Oliver, England",
             "timezone": "UTC",
             "date": "2022-12-26T20:00:00+00:00",
             "timestamp": 1672084800,
@@ -70,7 +70,7 @@
     {
         "fixture": {
             "id": 868107,
-            "referee": "P. Tierney",
+            "referee": "Paul Tierney, England",
             "timezone": "UTC",
             "date": "2022-12-26T17:30:00+00:00",
             "timestamp": 1672075800,
@@ -102,13 +102,13 @@
             "home": {
                 "id": 66,
                 "name": "Aston Villa",
-                "logo": "https://media.api-sports.io/football/teams/66.png",
+                "logo": "https://media-1.api-sports.io/football/teams/66.png",
                 "winner": false
             },
             "away": {
                 "id": 40,
                 "name": "Liverpool",
-                "logo": "https://media.api-sports.io/football/teams/40.png",
+                "logo": "https://media-1.api-sports.io/football/teams/40.png",
                 "winner": true
             }
         },
@@ -138,7 +138,7 @@
     {
         "fixture": {
             "id": 868108,
-            "referee": "D. Coote",
+            "referee": "David Coote, England",
             "timezone": "UTC",
             "date": "2022-12-26T12:30:00+00:00",
             "timestamp": 1672057800,
@@ -170,7 +170,7 @@
             "home": {
                 "id": 55,
                 "name": "Brentford",
-                "logo": "https://media.api-sports.io/football/teams/55.png",
+                "logo": "https://media-1.api-sports.io/football/teams/55.png",
                 "winner": null
             },
             "away": {
@@ -244,7 +244,7 @@
             "away": {
                 "id": 35,
                 "name": "Bournemouth",
-                "logo": "https://media-1.api-sports.io/football/teams/35.png",
+                "logo": "https://media.api-sports.io/football/teams/35.png",
                 "winner": false
             }
         },
@@ -274,7 +274,7 @@
     {
         "fixture": {
             "id": 868110,
-            "referee": "A. Madley",
+            "referee": "Andy Madley, England",
             "timezone": "UTC",
             "date": "2022-12-26T15:00:00+00:00",
             "timestamp": 1672066800,
@@ -342,7 +342,7 @@
     {
         "fixture": {
             "id": 868111,
-            "referee": "C. Pawson",
+            "referee": "Craig Pawson, England",
             "timezone": "UTC",
             "date": "2022-12-26T15:00:00+00:00",
             "timestamp": 1672066800,
@@ -380,7 +380,7 @@
             "away": {
                 "id": 39,
                 "name": "Wolves",
-                "logo": "https://media-1.api-sports.io/football/teams/39.png",
+                "logo": "https://media.api-sports.io/football/teams/39.png",
                 "winner": true
             }
         },
@@ -448,7 +448,7 @@
             "away": {
                 "id": 50,
                 "name": "Manchester City",
-                "logo": "https://media.api-sports.io/football/teams/50.png",
+                "logo": "https://media-1.api-sports.io/football/teams/50.png",
                 "winner": null
             }
         },
@@ -478,7 +478,7 @@
     {
         "fixture": {
             "id": 868113,
-            "referee": "J. Gillett",
+            "referee": "Jarred Gillett, Australia",
             "timezone": "UTC",
             "date": "2022-12-26T15:00:00+00:00",
             "timestamp": 1672066800,
@@ -510,7 +510,7 @@
             "home": {
                 "id": 46,
                 "name": "Leicester",
-                "logo": "https://media-1.api-sports.io/football/teams/46.png",
+                "logo": "https://media.api-sports.io/football/teams/46.png",
                 "winner": false
             },
             "away": {
@@ -578,13 +578,13 @@
             "home": {
                 "id": 33,
                 "name": "Manchester United",
-                "logo": "https://media-1.api-sports.io/football/teams/33.png",
+                "logo": "https://media.api-sports.io/football/teams/33.png",
                 "winner": true
             },
             "away": {
                 "id": 65,
                 "name": "Nottingham Forest",
-                "logo": "https://media-1.api-sports.io/football/teams/65.png",
+                "logo": "https://media.api-sports.io/football/teams/65.png",
                 "winner": false
             }
         },
@@ -614,7 +614,7 @@
     {
         "fixture": {
             "id": 868115,
-            "referee": "R. Jones",
+            "referee": "Robert Jones, England",
             "timezone": "UTC",
             "date": "2022-12-26T15:00:00+00:00",
             "timestamp": 1672066800,
@@ -646,7 +646,7 @@
             "home": {
                 "id": 41,
                 "name": "Southampton",
-                "logo": "https://media.api-sports.io/football/teams/41.png",
+                "logo": "https://media-1.api-sports.io/football/teams/41.png",
                 "winner": false
             },
             "away": {
